# scipp

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  Entity.h  Game.cpp  Game.h  InitState.cpp  InitState.h  README.md  State.cpp  State.h  StateManager.cpp  StateManager.h  TestState.cpp  TestState.h  compile.sh  db.sqlite3  link.sh  manage.py  scipp.sln  scipp.vcxproj  scipp.vcxproj.filters  test  todo.txt
app/: middleware.py  models.py  urls.py  validation.py  views.py
app/migrations/: 0001_initial.py  0002_alter_post_body_alter_post_date.py
app/static/app/css/: main.css
app/templates/app/: create-post.html  home.html  login-base.html  login.html  posts.html  register.html
hottake/: asgi.py  settings.py  wsgi.py
include/: Camera.hpp  DeathState.hpp  Game.h  Game.hpp  GameState.hpp  InitState.h  InitState.hpp  MenuState.hpp  SoundManager.hpp  State.h  StateManager.h  StateManager.hpp  Util.hpp
include/Input/: Input.hpp
include/Misc/: Explosion.hpp
include/Scriptable/: Component.hpp  Entity.hpp  EventObject.hpp  State.hpp
include/Scriptable/Components/: EnemyComponent.hpp  HealthComponent.hpp  LifetimeComponent.hpp  PhysicsComponent.hpp  ProjectileComponent.hpp  RenderComponent.hpp  SFMLRenderComponent.hpp  TextComonent.hpp  TextureComponent.hpp
include/Scriptable/Entities/: BulletEntity.hpp  EnemyEntity.hpp  HealthbarEntity.hpp  ItemEntity.hpp  MudTrapEntity.hpp  ParticleEntity.hpp  PlayerEntity.hpp  SimpleEntity.hpp  SpikeTrapEntity.hpp  TurretEntity.hpp
include/Scriptable/UI/: Inventory.hpp  Menu.hpp  Object.hpp  Rect.hpp  TextObject.hpp  UI.hpp  UIObject.hpp  UIRect.hpp
src/: Camera.cpp  DeathState.cpp  Entity.cpp  Game.cpp  GameState.cpp  InitState.cpp  SoundManager.cpp  State.cpp  StateManager.cpp  Util.cpp  main.cpp
src/Input/: Input.cpp
src/Misc/: Explosion.cpp
src/Scriptable/: Component.cpp  Entity.cpp  EventObject.cpp  State.cpp
src/Scriptable/Components/: EnemyComponent.cpp  HealthComponent.cpp  LifetimeComponent.cpp  PhysicsComponent.cpp  ProjectileComponent.cpp  RenderComponent.cpp  SFMLRenderComponent.cpp  TextComponent.cpp  TextureComponent.cpp
src/Scriptable/Entities/: BulletEntity.cpp  EnemyEntity.cpp  HealthbarEntity.cpp  ItemEntity.cpp  MudTrapEntity.cpp  ParticleEntity.cpp  PlayerEntity.cpp  SimpleEntity.cpp  SpikeTrapEntity.cpp  TurretEntity.cpp
src/Scriptable/UI/: Inventory.cpp  Object.cpp  Rect.cpp  TextObject.cpp  UIObject.cpp  UIRect.cpp
